# agentToAgent

./: .agent_session  .dockerignore  .env.enterprise  .env.example  .gitignore  AGENTS_UPGRADED_SUMMARY.md  ARCHITECTURE.md  AWS_CREDENTIALS_GUIDE.md  CONTEXT_PRESERVATION_FIX.md  CURL_EXAMPLES.md  DEPLOYMENT_COMPARISON.md  DOCKER_DEPLOYMENT.md  DOCS_FINAL_SUMMARY.md  ENHANCEMENTS_COMPLETE.md  INTERACTIVE_WORKFLOW_COMPLETE.md  INTERACTIVE_WORKFLOW_DEBUG.md  INTERACTIVE_WORKFLOW_EXAMPLES.md  INTERACTIVE_WORKFLOW_FIX.md  INTERACTIVE_WORKFLOW_GUIDE.md  INTERACTIVE_WORKFLOW_IMPLEMENTATION.md  INTERACTIVE_WORKFLOW_PLAN.md  INTERACTIVE_WORKFLOW_UX_IMPROVEMENTS.md  QUICK_REFERENCE.md  QUICK_START.md  QUICK_START_WEBSOCKET.sh  README.md  README_INTERACTIVE_WORKFLOWS.md  USER_CONTEXT_PROPAGATION_FIX.md  WEBSOCKET_GUIDE.md  WEBSOCKET_IMPLEMENTATION.md  WEBSOCKET_QUICK_START.md  WEBSOCKET_REALTIME_UPDATES.md  WORKFLOW_RESUME_FIX_COMPLETE.md  WORKFLOW_RESUME_REGISTRY_FIX.md  WORKFLOW_SAVE_FIX.md  cli_chat.py  docker-compose.yml  fix_python314.sh  pyproject.toml  requirements.txt  (+9 more)
docs/: A2A_Framework_Pitch_Deck.pptx  ARCHITECTURE.md  AWS_NATIVE_AGENTIC_FRAMEWORK_GUIDE.md  CHIME_SETUP_GUIDE.md  COMPONENT_REFERENCE.md  DEPLOYMENT.md  DEPLOYMENT_AWS.md  DEPLOYMENT_AZURE.md  DEPLOYMENT_SUMMARY.md  DOCUMENTATION.md  ENTERPRISE_DEPLOYMENT.md  IDENTITY_INTEGRATION_SUMMARY.md  IDENTITY_PROVIDER_SETUP.md  MCP_CURL_EXAMPLES.md  MULTI_STEP_INTERACTIONS.md  PRODUCTION_READY.md  QUICK_START.md  README.md.backup  STATUS_REPORT.md  TESTING_GUIDE.md
docs/archive/: AWS_CREDENTIALS_UPDATE.md  COMPLETE_SUMMARY.md  CONSOLIDATED_DOCS_PLAN.md  CONSOLIDATION_SUMMARY.md  DISTRIBUTED_ARCHITECTURE.md  DISTRIBUTED_README.md  DOCKER_COMPOSE_UPDATES.md  ENHANCEMENTS_PLAN.md  ENHANCEMENTS_QUICKREF.md  FIXES_APPLIED.md  FIXES_APPLIED_MCP_MATH.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  MATH_AGENT_SUMMARY.md  MCP_MATH_AGENT_README.md  MCP_PORT_CONFIGURATION.md  PROJECT_SUMMARY.md
examples/: code_analyzer_interactive.py  demo_workflow.py  mcp_interactive_math.py  rest_interactive_workflow.sh  websocket_interactive_workflow.py
scripts/: audit_envs.py  build_orchestrator_package.sh  cli_chat.py  setup.sh  setup_identity_provider.sh  start_mcp_services.sh  stop_mcp_services.sh  stop_services.sh  sync_env_examples.py  test_distributed_system.py  test_identity_provider.py  test_interactive_complete.py  test_interactive_rest.py  test_mcp_math_agent.py  verify_deployment.sh  write_compose.py  write_envs.py
services/mcp_gateway/: .env.example  Dockerfile  app.py  (+1 more)
shared/: README.md  __init__.py  agent_interaction.py  audit.py  auth_dependencies.py  config.py  distributed_state.py  guardrails.py  guardrails_config.json  identity_provider.py  llm_client.py  pyproject.toml  security.py  security_policies.json  vector_memory.py
shared/a2a_protocol/: __init__.py  client.py  models.py
shared/config/: enterprise_config.json  guardrails_config.json  security_policies.json
tests/: test_core.py
(+84 files in other folders)
